# autoCat

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  jobs.py  main.py  models.py
app/pipeline/: __init__.py  analyze.py  asr.py  export.py  ingest.py  media.py  run.py  utils.py  vision.py
app/static/: app.css
app/templates/: base.html  history.html  index.html  job.html  result.html  settings.html
docs/: douyin-auto-slicing-design.md
tests/: test_api.py  test_pipeline_utils.py
